// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно отрендерить заглушку промо-баннера для главной страницы 1`] = `
<div
  className="AppStoreBanner AppStoreBanner_view_promo AppStoreBanner_app_desktop"
/>
`;

exports[`должен правильно отрендерить заглушку промо-баннера для главной страницы 2`] = `
<div
  className="AppStoreBanner AppStoreBanner_view_promo AppStoreBanner_app_desktop"
>
  <p
    className="AppStoreBanner__title"
  >
    Авто.ру — 
    <br />
    приложение для покупки и продажи автомобилей
  </p>
  <p
    className="AppStoreBanner__lead"
  >
    более сотни тысяч объявлений 
    <br />
    о продаже автомобилей
  </p>
  <div
    className="AppStoreBanner__buttons"
  >
    <Connect(AppStoreButtons) />
  </div>
</div>
`;

exports[`должен сразу отрендерить промо-баннер для промо-страницы 1`] = `
<div
  className="AppStoreBanner AppStoreBanner_view_promo AppStoreBanner_app_desktop"
>
  <h1
    className="AppStoreBanner__title"
  >
    Авто.ру — 
    <br />
    приложение для покупки и продажи автомобилей
  </h1>
  <p
    className="AppStoreBanner__lead"
  >
    более сотни тысяч объявлений 
    <br />
    о продаже автомобилей
  </p>
  <div
    className="AppStoreBanner__buttons"
  >
    <Connect(AppStoreButtons) />
  </div>
</div>
`;
